# pyprojectx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pr  pw  pw.bat  px  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docs.yml  release.yml
.pyprojectx/pyprojectx/0.9.4-py3.9/: pyvenv.cfg
docs/: mkdocs.yml  zensical.toml
docs/docs/: dev-dependencies.md  getting-started.md  index.md  recipes.md  usage.md
docs/docs/config/: aliases.md  defaults.md  scripts.md  tools.md
docs/overrides/: main.html
src/pyprojectx/: cli.py  config.py  env.py  hash.py  install_global.py  lock.py  log.py  pw.py  requirements.py
src/pyprojectx/initializer/: global-template.toml  initializers.py  pdm-template.toml  poetry-template.toml  project-template.toml
src/pyprojectx/wrapper/: gx  pw.bat  pw.py  px  px.bat  pxg  pxg.bat
tests/: conftest.py  invalid.toml  test-no-config.toml  test-no-tool-config.toml  test.toml  test_cli.py  test_config.py  test_env.py  test_pw.py  test_px.py
tests/data/: alias-abbreviations.toml  lock_python_version.toml  pw-requirements.txt  pw-test.toml  test-lock.toml  test-no-tool-config.toml  test-shell.toml  test.toml
tests/integration/: test_pw.py  test_px.py
tests/unit/: test_cli.py  test_config.py  test_env.py  test_lock.py  test_pw.py  test_requirements.py
